# pivot-pdf

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  LICENSE  README.md  ROADMAP.md
.claude/agents/: code-reviewer.md
.github/workflows/: php-extension.yml  rust.yml
docs/: _config.yml  index.md  pdf-reference-curated.md
docs/features/: compression.md  edit-page.md  images.md  line-graphics.md  pdf-read.md  tables.md  truetype-fonts.md  word-break.md
examples/: Cargo.toml
examples/php/: generate_graphics.php  generate_images.php  generate_invoice.php  generate_page_numbers.php  generate_sakila.php  generate_sample.php  generate_tables.php  generate_textflow.php  generate_truetype.php  read_tables.php
examples/rust/: generate_graphics.rs  generate_images.rs  generate_invoice.rs  generate_page_numbers.rs  generate_sakila.rs  generate_sample.rs  generate_tables.rs  generate_textflow.rs  generate_truetype.rs  read_tables.rs
pdf-cli/src/: main.rs
pdf-core/: Cargo.toml
pdf-core/examples/: generate_graphics.rs  generate_images.rs  generate_page_numbers.rs  generate_sakila.rs  generate_sample.rs  generate_tables.rs  generate_textflow.rs  generate_truetype.rs
pdf-core/src/: document.rs  fonts.rs  graphics.rs  images.rs  lib.rs  objects.rs  reader.rs  tables.rs  textflow.rs  truetype.rs  writer.rs
pdf-core/tests/: basic_pdf_test.rs  document_test.rs  edit_page_test.rs  fonts_test.rs  graphics_test.rs  images_test.rs  objects_test.rs  reader_test.rs  tables_test.rs  textflow_test.rs  truetype_test.rs  writer_test.rs
pdf-php/: Cargo.toml  pdf-php.stubs.php
(+13 files in other folders)
